# ramenlibs

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: Find3Delight.cmake  FindAgg.cmake  FindAlembic.cmake  FindArnold.cmake  FindBreakpad.cmake  FindEigen.cmake  FindGLEW.cmake  FindGLFW3.cmake  (+11 more)
docs/: Doxyfile.in
future/nurbs/: CMakeLists.txt  README.md
future/nurbs/nurbs/: CMakeLists.txt  approx_equal.hpp  basis.hpp  config.hpp  empty.cpp  evaluate.hpp  knots.hpp  numeric_ops.hpp  parameterization.hpp  range_value_type.hpp
future/nurbs/test/: CMakeLists.txt  basis.cpp  evaluate.cpp  knots.cpp
google_testing_libs/: README.txt
ramen/: docs.hpp
ramen/algorithm/test/: CMakeLists.txt  clamp.cpp  edit_distance.cpp  for_each_position.cpp
ramen/arrays/ramen/arrays/: CMakeLists.txt  allocator_interface.hpp  apply_visitor.hpp  array.cpp  array.hpp  array_fwd.hpp  array_ref.hpp  config.hpp  named_array_map.cpp  named_array_map.hpp
ramen/arrays/ramen/arrays/Concepts/: ArrayModelConcept.hpp
ramen/arrays/ramen/arrays/detail/: allocator_wrapper.hpp  array_interface.hpp  array_interface_fwd.hpp  array_models.hpp  new_allocator.cpp  new_allocator.hpp  string_array_model.cpp  string_array_model.hpp
ramen/bezier/ramen/bezier/: CMakeLists.txt  bernstein.hpp  config.hpp
ramen/bezier/test/: CMakeLists.txt  bernstein.cpp
ramen/color/ramen/color/: CMakeLists.txt  cie_xyz_fits.hpp  color3.hpp  color4.hpp  color_rgbe.cpp  color_rgbe.hpp  colorspace.hpp  config.hpp  rgb_to_hsv.hpp  rgba_color.hpp  rgbe_color.cpp  rgbe_color.hpp  spectral_to_xyz.hpp
ramen/color/ramen/color/Concepts/: CieXYZFit.hpp
ramen/core/ramen/core/: CMakeLists.txt  allocator_interface.cpp  allocator_interface.hpp  allocator_wrapper.hpp  config.hpp  copy_on_write.hpp  counter.hpp  dictionary.cpp  dictionary.hpp  dictionary_fwd.hpp  empty.cpp  empty.hpp  exceptions.cpp  exceptions.hpp  final.hpp  flags.hpp  global_names.cpp  global_names.hpp  half.hpp  memory.cpp  memory.hpp  name.cpp  name.hpp  name_fwd.hpp  new_allocator.cpp  new_allocator.hpp  poly.hpp  poly_fwd.hpp  ref_counted.cpp  ref_counted.hpp  regex8.cpp  regex8.hpp  simple_expression_evaluator.hpp  stl_allocator_adapter.hpp  string16.cpp  string16.hpp  string8.cpp  string8.hpp  string8_vector.cpp  string8_vector.hpp  (+7 more)
ramen/core/ramen/core/Concepts/: RegularConcept.hpp
ramen/core/ramen/core/detail/: allocator_wrapper.hpp  new_allocator.cpp  new_allocator.hpp  string.hpp
ramen/core/test/: CMakeLists.txt  allocators.cpp  copy_on_write.cpp  counter.cpp  dictionary.cpp  empty.cpp  flags.cpp  memory.cpp  movable.hpp  name.cpp  poly.cpp  ref_counted.cpp  regex8.cpp  simple_expression_evaluator.cpp  string16.cpp  string8.cpp  string8_vector.cpp  types.cpp  unicode.cpp  variant.cpp
ramen/geo/ramen/geo/: CMakeLists.txt  attribute_ref.cpp  attribute_ref.hpp  attribute_table.cpp  attribute_table.hpp  config.hpp  exceptions.cpp  exceptions.hpp  global_names.cpp  global_names.hpp  primitives.cpp  primitives.hpp  shape.cpp  shape.hpp  shape_attributes.cpp  shape_attributes.hpp  shape_attributes_fwd.hpp  shape_fwd.hpp  shape_vector.cpp  shape_vector.hpp  shape_vector_fwd.hpp
ramen/geo/ramen/geo/Concepts/: ShapeModelConcept.hpp
ramen/geo/ramen/geo/algorithm/: polygon_normal.hpp  project_polygon_to_plane.hpp
ramen/geo/ramen/geo/io/: CMakeLists.txt  exceptions.cpp  exceptions.hpp  format.cpp  format.hpp  io.cpp  io.hpp  reader.cpp  reader.hpp  reader_interface.cpp  reader_interface.hpp  scene.cpp  scene.hpp  scene_fwd.hpp  shape_list.cpp  shape_list.hpp  shape_list_fwd.hpp
ramen/geo/ramen/geo/io/alembic/: alembic_format.cpp  alembic_format.hpp  alembic_reader_model.cpp  alembic_reader_model.hpp
ramen/geo/ramen/geo/shape_models/: curves_model.cpp  curves_model.hpp  curves_model_fwd.hpp  mesh_model.cpp  mesh_model.hpp  mesh_model_fwd.hpp  nurbs_curve_model.cpp  nurbs_curve_model.hpp  nurbs_curve_model_fwd.hpp  nurbs_model.cpp  nurbs_model.hpp  nurbs_surface_model.cpp  nurbs_surface_model.hpp  nurbs_surface_model_fwd.hpp  points_model.cpp  points_model.hpp  points_model_fwd.hpp  poly_mesh_model.cpp  poly_mesh_model.hpp  poly_mesh_model_fwd.hpp  shape_types.cpp  shape_types.hpp  shape_visitor.cpp  shape_visitor.hpp  subd_mesh_model.cpp  subd_mesh_model.hpp  subd_mesh_model_fwd.hpp  visitable.hpp
ramen/geo/ramen/geo/visitors/: bounding_box3.hpp  compute_face_normals.cpp  compute_face_normals.hpp  count_ngons.cpp  count_ngons.hpp  mesh_to_subd.cpp  mesh_to_subd.hpp  shape_to_points.cpp  shape_to_points.hpp  transform.hpp  triangulate.cpp  triangulate.hpp
ramen/geo/test/: CMakeLists.txt  attribute_ref.cpp  attribute_table.cpp  bounding_box3.cpp  exceptions.cpp  geo_info.cpp  polygon_normal.cpp  project_polygon.cpp  shape_attributes.cpp  shape_transform.cpp
ramen/geo/test/geo_viewer/: CMakeLists.txt  main.cpp  main_window.hpp  scene_view.cpp  scene_view.hpp  scene_view_fwd.hpp
ramen/geo/tools/: CMakeLists.txt
ramen/geo/tools/geo_viewer/: CMakeLists.txt  main_window.cpp  main_window.hpp  scene_view.cpp  scene_view.hpp
ramen/gl/ramen/gl/: CMakeLists.txt  buffer_obj.cpp  buffer_obj.hpp  config.hpp  framebuffer_obj.cpp  framebuffer_obj.hpp  gl.cpp  gl.hpp  glew.hpp  glu.cpp  glu.hpp  program.cpp  program.hpp  renderbuffer_obj.cpp  renderbuffer_obj.hpp  scoped_client_state.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  vertex_buffer_obj.cpp  vertex_buffer_obj.hpp
ramen/hash/ramen/hash/: CMakeLists.txt  config.hpp  generator.hpp  hash_traits.hpp  md5_hash_fun.cpp  md5_hash_fun.hpp  murmur3_hash_fun.cpp  murmur3_hash_fun.hpp
ramen/hash/ramen/hash/Concepts/: HashFunctionConcept.hpp
ramen/math/test/: CMakeLists.txt  box.cpp  cmath.cpp  fast_float.cpp  lerp.cpp  line.cpp  matrix.cpp  normal.cpp  plane.cpp  points.cpp  points_functional.cpp  quaternion.cpp  ray.cpp  transform.cpp  transform_stack.cpp  vectors.cpp
ramen/os/ramen/os/: CMakeLists.txt  config.hpp  system_info.cpp  system_info.hpp  system_info_fwd.hpp
ramen/os/ramen/os/implementation/: system_info_linux.hpp  system_info_osx.hpp  system_info_win.hpp
(+195 files in other folders)
